--- a/testing.html
+++ b/testing.html
@@ -1,4 +1,4 @@
-<table border="1">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body><table border="1">
     <thead>
         <tr>
             <th>S.No.</th>
@@ -12,7 +12,7 @@
             <th>Recovery</th>
             <th>Feedback Date</th>
         </tr>
-    </thead><tbody>
+    </thead><tbody class="tbodyclass">
 
 
             <tr>
@@ -106,10 +106,6 @@
                 <td>0.00</td>
                 <td>29-08-2019</td>
             </tr>
-
-
-    </tbody><tbody>
-
 
             <tr>
                 <td>1</td>
@@ -215,10 +211,6 @@
                 <td>0.00</td>
                 <td>22-08-2019</td>
             </tr>
-
-
-    </tbody><tbody>
-
 
             <tr>
                 <td>1</td>
@@ -21189,11 +21181,6 @@
                 <td>0.00</td>
                 <td>05-10-2019</td>
             </tr>
-
-
-    </tbody><tbody>
-
-
             <tr>
                 <td>1</td>
                 <td>04/2018 </td>
@@ -21272,11 +21259,6 @@
                 <td>0.00</td>
                 <td>09-03-2019</td>
             </tr>
-
-
-    </tbody><tbody>
-
-
             <tr>
                 <td>1</td>
                 <td>06/2018 </td>
@@ -21370,4 +21352,4 @@
             </tr>
 
 
-    </tbody></table>
+    </tbody></table></body></html>
