--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Internet</h1>
-<p>I'm Kartik</p>
+<h1>Hello Internet.</h1>
+  <p> Site under Construction. </p>
 </body>
 </html>
