--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
   <h1> కార్తీక్ చింతక్రింద </h1>
   <p> <i>"ఈ చరిత్ర లో నీకు కొన్ని పేజీలు ఉండాలీ." </i> </p>
+  <p> అందులో ఇది ఒకటి </p>
 </body>
 </html>
